---
source: src/test.rs
expression: evaluate_example(path)
input_file: tests/table.nu
---
==== COMPILER ====
0: String (7 to 10) ""a""
1: String (12 to 15) ""b""
2: List(ListId(0)) (6 to 15) - sub_nodes: 0,1
3: Int (24 to 25) "1"
4: Int (27 to 28) "2"
5: List(ListId(1)) (23 to 28) - sub_nodes: 3,4
6: Int (35 to 36) "3"
7: Int (38 to 39) "4"
8: List(ListId(2)) (34 to 39) - sub_nodes: 6,7
9: Table(TableId(0)) (0 to 41) - sub_nodes: header: 2, rows: 5,8
10: Block(BlockId(0)) (0 to 42) - sub_nodes: 9
==== SCOPE ====
0: Frame Scope, node_id: NodeId(10) (empty)
==== TYPES ====
0: unknown
1: unknown
2: unknown
3: unknown
4: unknown
5: unknown
6: unknown
7: unknown
8: unknown
9: error
10: error
==== TYPE ERRORS ====
Error (NodeId 9): Expected an expression to typecheck, got 'Table(TableId(0))'
==== IR ====
register_count: 0
file_count: 0
==== IR ERRORS ====
Error (NodeId 9): node Table(TableId(0)) not suported yet

